fix(favorites) : #MAG-352 fix icon placement/spacing (#198)

--- a/frontend/src/components/magnets-collection/MagnetsCollectionModal.scss
+++ b/frontend/src/components/magnets-collection/MagnetsCollectionModal.scss
@@ -86,3 +86,7 @@ ul.grid {
   text-decoration: underline;
   cursor: pointer;
 }
+
+.copy-icon {
+  margin-bottom: 0.25em;
+}
